Fix tasks print when description is too long

--- a/www/go/modules/community/tasks/views/extjs3/themes/default/style.css
+++ b/www/go/modules/community/tasks/views/extjs3/themes/default/style.css
@@ -69,6 +69,11 @@
 
     .tasks-task > .x-panel-bwrap > .x-panel-body > div {
         width: 100% !important;
+        position: relative !important;
+        float: none !important;
+        clear: both !important;
+        overflow: visible !important;
+        page-break-inside: avoid;
     }
 
     .tasks-task .x-grid3,
